tests/graphql/mutations/user/snapshots/root__graphql__mutations__user__test__ユーザを追加することができること-2.snap
---
source: tests/graphql/mutations/user/test.rs
assertion_line: 44
expression: "graphql_req(&app, req_body).await"

---
{
  "data": {
    "user": {
      "id": 5,
      "name": "John"
    }
  }
}
