tests/graphql/mutations/user/snapshots/root__graphql__mutations__user__test__ユーザを追加することができること.snap
---
source: tests/graphql/mutations/user/test.rs
assertion_line: 32
expression: res

---
{
  "data": {
    "addUser": {
      "id": 5,
      "name": "John"
    }
  }
}
