tests/graphql/mutations/user/snapshots/root__graphql__mutations__user__test__空のユーザ名の場合はバリデーションエラーをレスポンスすること.snap
---
source: tests/graphql/mutations/user/test.rs
assertion_line: 70
expression: "graphql_req(&app, req_body).await"

---
{
  "data": {
    "addUser": {
      "errors": [
        {
          "field": "name",
          "message": "given empty value"
        }
      ]
    }
  }
}
